argocd/k8s/traefik/dashboard/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  # annotations: 
  #   kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`traefik.stilo.ca`)
#       kind: Rule
#       middlewares:
#         - name: traefik-dashboard-basicauth
#           namespace: traefik
#       services:
#         - name: api@internal
#           kind: TraefikService
#   tls:
#     secretName: stilo-ca-tls

spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`, `/dashboard/`) || PathPrefix(`/api`, `/api/`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
